--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,11 @@
   ],
   "rules": {
     "no-console": "warn",
-    "prettier/prettier": "error"
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ]
   }
 }
