--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest --passWithNoTests --watch"
   },
   "keywords": [],
   "author": "",
@@ -22,5 +22,8 @@
     "prettier": "^2.8.7",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.3"
+  },
+  "dependencies": {
+    "ts-node-dev": "^2.0.0"
   }
 }
